--- a/app/pages/about.twig
+++ b/app/pages/about.twig
@@ -35,7 +35,17 @@
           </blockquote>
         </div>
       </div>
-      {% include "../blocks/block-text/block-text.twig" %}
+      <div class="block-text pb6">
+        <p>
+          Не следует, однако забывать, что постоянный количественный рост и сфера нашей активности способствует подготовки и реализации систем массового участия.
+        </p>
+        <p>
+          Повседневная практика показывает, что консультация с широким активом обеспечивает широкому кругу (специалистов) участие в формировании форм развития. Разнообразный и богатый опыт постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа системы обучения кадров, соответствует насущным потребностям.
+        </p>
+        <p>
+          Значимость этих проблем настолько очевидна, что постоянный количественный рост и сфера нашей активности обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют определения и уточнения новых предложений. Значимость этих проблем настолько очевидна, что консультация с широким активом играет важную роль в формировании новых предложений.
+        </p>
+      </div>
       <ul class="about-section__statistics">
         <li class="about-section__statistics-item">
           <span class="about-section__statistics-num">7258</span>
@@ -82,7 +92,33 @@
       } %}
     </section>
     <section class="product-characteristics pb6">
-      {% include "../blocks/product-characteristics/product-characteristics.twig" %}
+      <h2>Для групп товаров, представленных на сайте Н2</h2>
+      <ul class="pb6">
+        <li>
+          Краткую характеристику бренда, его доля в процентах и деньгах среди товарных и ценовых аналогов на рынке Украины
+        </li>
+        <li>
+          Квартальный оборот по предыдущим периодам в различных типах реализации (онлайн, офлайн, опт)
+        </li>
+        <li>
+          Предполагаемый оборот с учетом сезонности
+        </li>
+        <li>
+          Список конкурирующих брендов — их доля на рынке Украины
+        </li>
+        <li>
+          Список конкурирующих продуктов — их доля на рынке Украины
+        </li>
+        <li>
+          Маркетинговый фонд на развитие бренда со стороны поставщика и Бренда
+        </li>
+        <li>
+          Маржинальность и степень надежности фиксированных цен на рынке
+        </li>
+        <li>
+          Указать преимущественные характеристики бренда, слабые и сильные стороны
+        </li>
+      </ul>
       <div class="product-characteristics__video-block js-video-block">
         <picture>
           <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/about/03.webp">
@@ -92,6 +128,90 @@
           <use xlink:href="./assets/images/sprite.svg#play"></use>
         </svg>
       </div>
+    </section>
+    <section class="significance pb6">
+      <h2>Для групп товаров, представленных на сайте Н4</h2>
+      <div>
+        Значимость этих проблем настолько очевидна, что постоянный количественный рост и сфера нашей активности обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности требуют определения и уточнения новых предложений. Значимость этих проблем настолько очевидна, что консультация с широким активом играет важную роль в формировании новых предложений.
+      </div>
+    </section>
+    <section class="about__internet-services pb6">
+      <h2 class="about__services-title">Полный цикл интернет-услуг для вашего бренда Н3</h2>
+      <div class="about__services-grid">
+        <div class="about__services-item">
+          <picture>
+            <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/about/04.webp">
+            <img class="lazy about__services-img" src="./assets/images/pixel.png" data-src="./assets/images/about/04.jpg" alt="img">
+          </picture>
+        </div>
+        <div class="about__services-item">
+          <picture>
+            <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/about/05.webp">
+            <img class="lazy about__services-img" src="./assets/images/pixel.png" data-src="./assets/images/about/05.jpg" alt="img">
+          </picture>
+        </div>
+        <div class="about__services-item">
+          <picture>
+            <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/about/06.webp">
+            <img class="lazy about__services-img" src="./assets/images/pixel.png" data-src="./assets/images/about/06.jpg" alt="img">
+          </picture>
+        </div>
+        <div class="about__services-item">
+          <picture>
+            <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/about/07.webp">
+            <img class="lazy about__services-img" src="./assets/images/pixel.png" data-src="./assets/images/about/07.jpg" alt="img">
+          </picture>
+        </div>
+        <div class="about__services-item about__services-item--special">
+          <picture>
+            <source type="image/webp" srcset="./assets/images/pixel.png" data-srcset="./assets/images/about/08.webp">
+            <img class="lazy about__services-img" src="./assets/images/pixel.png" data-src="./assets/images/about/08.jpg" alt="img">
+          </picture>
+        </div>
+      </div>
+    </section>
+    <section class="possibilities">
+      <h2 class="possibilities__title">
+        Для групп товаров, не представленных на сайте Н5
+      </h2>
+      <ul class="possibilities__list">
+        <li class="possibilities__list-item">
+          <span class="possibilities__span">
+            1
+          </span>
+          Предоставить образцы продукции
+        </li>
+        <li class="possibilities__list-item">
+          <span class="possibilities__span">
+            2
+          </span>
+          Кредитные условия
+        </li>
+        <li class="possibilities__list-item">
+          <span class="possibilities__span">
+            3
+          </span>
+          Формы оплаты
+        </li>
+        <li class="possibilities__list-item">
+          <span class="possibilities__span">
+            4
+          </span>
+          Сервисное обслуживание, возможность возврата
+        </li>
+        <li class="possibilities__list-item">
+          <span class="possibilities__span">
+            5
+          </span>
+          Возможность проведения тренингов
+        </li>
+        <li class="possibilities__list-item">
+          <span class="possibilities__span">
+            6
+          </span>
+          Описание товаров в электронном виде
+        </li>
+      </ul>
     </section>
   </div>
 </main>
