--- a/app/styles/helpers/variables.scss
+++ b/app/styles/helpers/variables.scss
@@ -53,6 +53,21 @@ $sm: 500px;
   line-height: 3.4rem;
 }
 
+%text-28 {
+  font-size: 2.8rem;
+  line-height: 3.8rem;
+}
+
+%text-30 {
+  font-size: 3rem;
+  line-height: 4rem;
+}
+
+%text-32 {
+  font-size: 3.2rem;
+  line-height: 4.2rem;
+}
+
 %text-34 {
   font-size: 3.4rem;
   line-height: 4.4rem;
