--- a/app/blocks/about/about-slider/about-slider.scss
+++ b/app/blocks/about/about-slider/about-slider.scss
@@ -87,4 +87,16 @@
       height: 20rem;
     }
   }
+
+  &__arrow-icon {
+    transition: fill 0.3s;
+
+    &:hover {
+      fill: var(--green);
+    }
+
+    &:active {
+      fill: var(--active-green);
+    }
+  }
 }
