--- a/app/blocks/header/header.scss
+++ b/app/blocks/header/header.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 100;
   height: 8rem;
   background-color: var(--black);
 
@@ -41,31 +41,18 @@
   }
 
   &__menu-link {
-    position: relative;
-
     @extend %text-18;
     font-weight: 700;
     color: var(--white);
     text-transform: uppercase;
-    transition: color 0.5s;
-
-    &::before {
-      position: absolute;
-      bottom: -0.2rem;
-      left: 0;
-      width: 0;
-      height: 0.2rem;
-      content: '';
-      background-color: var(--green);
-      transition: width 0.5s;
-    }
+    transition: color 0.3s;
 
     &:hover {
       color: var(--green);
+    }
 
-      &::before {
-        width: 100%;
-      }
+    &:active {
+      color: var(--active-green);
     }
   }
 
@@ -107,6 +94,17 @@
         fill: var(--green);
       }
     }
+
+    &:active {
+      .header__nums {
+        border: 0.2rem solid var(--active-green);
+        color: var(--active-green);
+      }
+
+      .header__icon {
+        fill: var(--active-green);
+      }
+    }
   }
 
   &__btn {
@@ -116,6 +114,12 @@
     &:hover {
       .header__icon {
         fill: var(--green);
+      }
+    }
+
+    &:active {
+      .header__icon {
+        fill: var(--active-green);
       }
     }
   }
@@ -228,4 +232,8 @@
     stroke: var(--white);
     fill: none;
   }
+}
+
+.header__menu-link.is-active {
+  color: var(--green);
 }
