--- a/app/pages/index.twig
+++ b/app/pages/index.twig
@@ -21,7 +21,22 @@
         <a class="progress__link" href="./main.html" target="_blank">Главная</a>
       </li>
       <li class="progress__item">
+        <a class="progress__link" href="./catalog.html" target="_blank">Каталог</a>
+      </li>
+      <li class="progress__item">
         <a class="progress__link" href="./about.html" target="_blank">О нас</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./contacts.html" target="_blank">Контакты</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./action.html" target="_blank">Акции</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./partners.html" target="_blank">Партнеры</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./404.html" target="_blank">404</a>
       </li>
     </ul>
   </div>
