--- a/app/blocks/main/main.scss
+++ b/app/blocks/main/main.scss
@@ -191,10 +191,14 @@
     width: 4rem;
     height: 4rem;
     fill: var(--black);
-    transition: transform 0.3s;
+    transition: fill 0.3s;
 
     &:hover {
-      transform: translateX(0.5rem);
+      fill: var(--green);
+    }
+
+    &:active {
+      fill: var(--active-green);
     }
   }
 }
