--- a/app/blocks/about/about-slider/about-slider.scss
+++ b/app/blocks/about/about-slider/about-slider.scss
@@ -56,6 +56,8 @@
   .swiper-button-next,
   .swiper-button-prev {
     position: static;
+    width: 4rem;
+    height: 4rem;
   }
 
   .swiper-button-next::after,
