--- a/app/blocks/head/head.twig
+++ b/app/blocks/head/head.twig
@@ -32,6 +32,8 @@
   <link rel="stylesheet" href="./assets/libs/css/animate.min.css">
   <!-- sweetalert -->
   <link rel="stylesheet" href="./assets/libs/css/sweetalert2.min.css">
+  <!-- nouislider -->
+  <link rel="stylesheet" href="./assets/libs/css/nouislider.min.css">
   <!--Styles-->
   <link id="app-css" rel="stylesheet" href="./assets/styles/app.min.css">
   <script>
