--- a/app/blocks/catalog-filter/catalog-filter.scss
+++ b/app/blocks/catalog-filter/catalog-filter.scss
@@ -13,14 +13,22 @@
 
     @media (max-width: $lg) {
       position: fixed;
-      top: 0;
+      top: -100%;
       left: 0;
       width: 100%;
       height: 100%;
       z-index: 100;
       overflow: auto;
       background-color: var(--white);
-      padding: 2rem;
+      padding: 0;
+      pointer-events: none;
+      transition: all 0.3s;
+
+      > * {
+        &:not(:first-child) {
+          padding: 0 2rem;
+        }
+      }
     }
   }
 
@@ -38,9 +46,38 @@
     }
   }
 
+  &__header-filter {
+    padding: 2.5rem 2rem;
+    background-color: var(--black);
+
+    @media (min-width: 1025px) {
+      display: none;
+    }
+  }
+
+  &__header-btn {
+    background-color: transparent;
+    border: none;
+    @extend %text-16;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: var(--white);
+
+    @extend %flex-center-y;
+  }
+
+  &__header-icon {
+    stroke: var(--white);
+    fill: transparent;
+    width: 1.2rem;
+    height: 1.2rem;
+    margin-right: 2rem;
+  }
+
   &__grid-filter {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
 
     > * {
       margin-bottom: 1rem;
@@ -410,6 +447,82 @@
       display: none;
     }
   }
+
+  .noUi-target {
+    width: 40rem;
+    height: 0.3rem;
+    background: var(--gray5);
+    border-radius: 0;
+    border: none;
+    box-shadow: none;
+
+    @media (max-width: $lg) {
+      width: 100%;
+    }
+  }
+
+  .noUi-connect {
+    background: var(--green);
+  }
+
+  .noUi-handle {
+    border: none;
+    border-radius: 0;
+    background: var(--green);
+    box-shadow: none;
+    cursor: pointer;
+  }
+
+  .noUi-horizontal .noUi-handle {
+    width: 1rem;
+    height: 1rem;
+    top: -3px;
+    right: -5px;
+  }
+
+  .noUi-handle:after, .noUi-handle:before {
+    content: none;
+  }
+
+  &__slider-snap {
+    margin-left: 2rem;
+
+    @media (max-width: $lg) {
+      margin-left: 0;
+      width: 100%;
+      margin-top: 1rem;
+    }
+  }
+
+  &__slider-title {
+    @extend %text-16;
+    color: var(--black);
+    margin-bottom: 1rem;
+
+    @media (min-width: 1025px) {
+      display: none;
+    }
+  }
+
+  &__slider-wrap {
+    @extend %flex-between;
+  }
+
+  &__slider-value {
+    @extend %text-12;
+    font-weight: 400;
+    color: var(--white);
+    width: 13rem;
+    height: 4rem;
+    border: 0.1rem solid var(--gray5);
+    border-bottom: none;
+
+    @extend %flex-center-xy;
+
+    @media (max-width: $lg) {
+      color: var(--black);
+    }
+  }
 }
 
 .label {
@@ -582,4 +695,9 @@
   .catalog-filter__icon {
     fill: var(--green);
   }
+}
+
+.catalog-filter__top.is-active {
+  top: 0;
+  pointer-events: auto;
 }
