--- a/app/blocks/link/link.twig
+++ b/app/blocks/link/link.twig
@@ -4,6 +4,8 @@
 <script src="./assets/libs/js/lazyload.min.js"></script>
 <script src="./assets/libs/js/imask.min.js"></script>
 <script src="./assets/libs/js/sweetalert2.min.js"></script>
+<script src="./assets/libs/js/nouislider.min.js"></script>
+<script src="./assets/libs/js/wNumb.min.js"></script>
 <script src="./assets/scripts/app.min.js"></script>
 </body>
 </html>
